Add intermediate proc between module and cmdModuleSwitch
Introduce cmdModuleIntSwitch procedure that is called by module
procedure for switch sub-command. cmdModuleIntSwitch analyzes
context and call cmdModuleSwitch.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -468,6 +468,9 @@ proc module {command args} {
       unload {
          set cmdprocsuffix IntUnload
       }
+      switch {
+         set cmdprocsuffix IntSwitch
+      }
       initadd - initprepend - initswitch - initrm - initlist - initclear {
          set cmdprocsuffix Init
          lappend cmdopts [string range $command 4 end]
@@ -499,6 +502,9 @@ proc module {command args} {
       unload {
          lappend cmdopts $mode
       }
+      switch {
+         lappend cmdopts $mode $tag_list
+      }
       use {
          lappend cmdopts $mode $addpath_pos
       }
@@ -526,68 +532,7 @@ proc module {command args} {
       }
    }
 
-   switch -- $command {
-      switch {
-         # pass 'user asked state' to switch procedure
-         set uasked [isTopEvaluation]
-         if {$uasked} {
-            cmdModuleSwitch $uasked $tag_list {*}$args
-         } else {
-            # CAUTION: it is not recommended to use the `switch`
-            # sub-command in modulefiles as this command is intended for
-            # the command-line for a 2in1 operation. Could be removed from
-            # the modulefile scope in a future release. Use `module unload`
-            # and `module load` commands in modulefiles instead.
-
-            switch -- $mode {
-               load {
-                  cmdModuleSwitch $uasked $tag_list {*}$args
-               }
-               unload {
-                  # find what has been asked for unload and load
-                  lassign $args swunmod swlomod
-                  if {$swlomod eq {} && $swunmod ne {}} {
-                     set swlomod $swunmod
-                  }
-
-                  # apply same mechanisms than for 'module load' and
-                  # 'module unload' for an unload evaluation: nothing done
-                  # for switched-off module and unload of switched-on
-                  # module. If auto handling is enabled switched-on module
-                  # is handled via UReqUn mechanism (unless if
-                  # implicit_requirement has been inhibited). Also unloads are
-                  # triggered by ongoing reload, purge, restore, reset, stash
-                  # or stashpop cmds
-                  if {(![getConf auto_handling] || [getState\
-                     inhibit_req_record] eq [currentState evalid]) &&\
-                     $swlomod ne {} && [aboveCommandName] ni [list purge\
-                     reload restore reset stash stashpop]} {
-                     # unload mod if it was loaded prior this mod, not user
-                     # asked and not required by another loaded module
-                     set modlist [getLoadedModulePropertyList name]
-                     set modidx [lsearch -exact $modlist [currentState\
-                        modulename]]
-                     if {$modidx != 0} {
-                        set priormodlist [lrange $modlist 0 $modidx]
-                        if {[set unmod [getLoadedMatchingName $swlomod {} 0\
-                           $priormodlist]] ne {}} {
-                           if {[cmdModuleUnload urequn match 1 0 1 1\
-                              $unmod]} {
-                              reportWarning "Unload of useless requirement\
-                                 [getModuleDesignation loaded $unmod] failed"\
-                                 1
-                           }
-                        }
-                     }
-                  }
-               }
-            }
-         }
-      }
-      default {
-         $cmdprocname {*}$cmdopts {*}$args
-      }
-   }
+   $cmdprocname {*}$cmdopts {*}$args
    lpopState commandname
    lpopState always_read_full_file
 
