Clean useless --output ignore code and add tests

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -311,11 +311,9 @@ proc parseModuleCommandArgs {topcall cmd ignerr args} {
          if {[isDiffBetweenList [split [expr {[string index $asked_output 0]\
             in {+ -} ? [string range $asked_output 1 end] : $asked_output}]\
             :] [lindex $::g_config_defs($outputconf) 4]]} {
-            if {!$ignerr} {
-               knerror "Invalid element in value list for '$output_arg'\
-                  option on $cmd sub-command\nAllowed elements are: [lindex\
-                  $::g_config_defs($outputconf) 4] (separated by ':')"
-            }
+            knerror "Invalid element in value list for '$output_arg' option\
+               on $cmd sub-command\nAllowed elements are: [lindex\
+               $::g_config_defs($outputconf) 4] (separated by ':')"
          } else {
             ##nagelfar ignore Suspicious variable name
             set ::asked_$outputconf $asked_output
