Remove useless $fetch_tags condition

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -441,13 +441,12 @@ proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
          set modnamevr_tag_list [getTagList $modnamevr]
          set modnamevr_extratag_list [getExtraTagList $modnamevr]
          lassign [parseModuleSpecification 0 0 0 0 {*}$newmodnamevr] modnamevr
-         if {$fetch_tags} {
-            collectModuleTags $modnamevr
-            # set tags applying to previous name (without default variant set)
-            # not to forget extra defined tags
-            setModuleTag $modnamevr {*}$modnamevr_tag_list
-            setModuleExtraTag $modnamevr {*}$modnamevr_extratag_list
-         }
+         # $up_namevr is only enabled when $fetch_tags is also enabled
+         collectModuleTags $modnamevr
+         # set tags applying to previous name (without default variant set)
+         # not to forget extra defined tags
+         setModuleTag $modnamevr {*}$modnamevr_tag_list
+         setModuleExtraTag $modnamevr {*}$modnamevr_extratag_list
       }
    }
 
