lint: fix SC2164 shellcheck warning

--- a/script/add.modules.in
+++ b/script/add.modules.in
@@ -187,7 +187,7 @@ You had no $1 as I see it.  Copying $4 for you.
 }
 
 # process files in $HOME
-cd "$HOME"
+cd "$HOME" || exit 1
 if [ -r .bash_profile ]; then
 	shdot .bash_profile source sh $SKEL/.profile
 fi
