lint: fix SC2091 shellcheck warning

--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -123,7 +123,7 @@ _module() {
 }
 
 # define completion for ml command if command exists
-if $(type -t ml >/dev/null); then
+if type -t ml >/dev/null; then
     _ml() {
         local cur="$2" prev="$3" cmds opts
 
