lint: fix SC2034 shellcheck warning

--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -63,7 +63,7 @@ _module_long_arg_list() {
 }
 
 _module() {
-    local cur="$2" prev="$3" cmds opts
+    local cur="$2" prev="$3"
 
     COMPREPLY=()
 
@@ -125,7 +125,7 @@ _module() {
 # define completion for ml command if command exists
 if type -t ml >/dev/null; then
     _ml() {
-        local cur="$2" prev="$3" cmds opts
+        local cur="$2" prev="$3"
 
         COMPREPLY=()
 
