lint: fix SC2268 shellcheck warning

--- a/script/add.modules.in
+++ b/script/add.modules.in
@@ -60,7 +60,7 @@ fi
 /bin/echo "Continue on (type n for no - default=yes)?\c"
 read xxx
 
-if [ x"$xxx" = xn ]
+if [ "$xxx" = 'n' ]
 then
 	exit 1
 fi
@@ -99,12 +99,12 @@ Processing your $1 (your old one is $1.old)
 !
 		if cleandot "$1" "/tmp/$1.$$" "$1.old"
 		then
-			if [ x"$2" = xsource ]
+			if [ "$2" = 'source' ]
 			then
 				/bin/cat <<!
 Adding sourcing lines at beginning of "$1"
 !
-				if [ x"$3" = xsh ]
+				if [ "$3" = 'sh' ]
 				then
 					findload "$1.old"
 					/bin/cat > "$1" <<!
@@ -124,7 +124,7 @@ then
 					/bin/cat >> "$1" <<!
 fi
 !
-				elif [ x"$3" = xcsh ]
+				elif [ "$3" = 'csh' ]
 				then
 					findload "$1.old"
 					/bin/cat > "$1" <<!
@@ -145,12 +145,12 @@ endif
 !
 				fi
 				/bin/cat "/tmp/$1.$$" >> "$1" && /bin/rm "/tmp/$1.$$"
-			elif [ x"$2" = xalias ]
+			elif [ "$2" = 'alias' ]
 			then
 				/bin/cat <<!
 Adding alias or function lines at beginning of $1
 !
-				if [ x"$3" = xsh ]
+				if [ "$3" = 'sh' ]
 				then
 					/bin/cat > "$1" <<!
 case "\$0" in
@@ -161,7 +161,7 @@ case "\$0" in
 esac
 module() { eval \`@TCLSH@ '@libexecdir@/modulecmd.tcl' \$modules_shell \$*\`; }
 !
-				elif [ x"$3" = xcsh ]
+				elif [ "$3" = 'csh' ]
 				then
 					/bin/cat > "$1" <<!
 if (\$?tcsh) then
