lint: fix SC3045 shellcheck warning

--- a/init/sh.in
+++ b/init/sh.in
@@ -56,6 +56,7 @@ if [ $_mlret -eq 0 ]; then
    eval "$_mlcode"
 
    # if sh is bash, export functions to get them defined in sub-shells
+   # shellcheck disable=SC3045
    if [ "${BASH:-}" != '' ]; then
       export -f _module_raw
       export -f module
