lint: fix SC2016 shellcheck warning

--- a/script/add.modules.in
+++ b/script/add.modules.in
@@ -19,6 +19,7 @@
 
 ##########################################################################
 
+# shellcheck disable=SC2016
 VERSION='$Id: 196cf1d4fbd7d3deecf648e85ee37ead75a60a93 $'
 SKEL=/etc/skel
 ETC=/skel
