lint: fix SC2006 shellcheck warning

--- a/script/add.modules.in
+++ b/script/add.modules.in
@@ -197,7 +197,7 @@ if [ -r .bash_login ]; then
 fi
 shdot .profile source sh $SKEL/.profile
 shdot .bashrc alias sh $SKEL/.kshenv
-shdot "`basename "${ENV:=.kshenv}"`" alias sh $SKEL/.kshenv
+shdot "$(basename "${ENV:=.kshenv}")" alias sh $SKEL/.kshenv
 shdot .login source csh $SKEL/.login
 shdot .cshrc alias csh $SKEL/.cshrc
 
