--- a/script/gitlog2changelog.py.in
+++ b/script/gitlog2changelog.py.in
@@ -3,7 +3,8 @@
 # Minor changes for NUT by Charles Lepple
 # Distributed under the terms of the GNU General Public License v2 or later
 
-import string, re, os
+import re
+import os
 from textwrap import TextWrapper
 import sys
 import subprocess
@@ -40,7 +41,7 @@ try:
     fin, ferr = p.communicate()
     if p.wait() != 0:
         print("ERROR getting git changelog")
-        system.exit(1)
+        sys.exit(1)
     fin = fin.splitlines()
     fin_mode = 3
 except TypeError:
@@ -69,7 +70,10 @@ files = ""
 prevAuthorLine = ""
 
 wrapper = TextWrapper(
-    initial_indent="  ", subsequent_indent="  ", width=78, break_on_hyphens=False
+    initial_indent="  ",
+    subsequent_indent="  ",
+    width=78,
+    break_on_hyphens=False
 )
 
 # The main part of the loop
@@ -115,7 +119,7 @@ for line in fin:
     elif "Signed-off-by" in line:
         continue
     # Extract the actual commit message for this commit
-    elif authorFound & dateFound & messageFound == False:
+    elif authorFound & dateFound & messageFound is False:
         # Find the commit message if we can
         if len(line) == fin_chop:
             if messageNL:
@@ -135,7 +139,7 @@ for line in fin:
         continue
     # Collect the files for this commit. FIXME: Still need to add +/- to files
     elif authorFound & dateFound & messageFound:
-        fileList = re.split(" \| ", line, 2)
+        fileList = re.split(r' \| ', line, 2)
         if len(fileList) > 1:
             if len(files) > 0:
                 files = files + ", " + fileList[0].strip()
