install: zip ChangeLog file to reduce install size
Install ChangeLog.gz zipped documentation file instead of ChangeLog to
reduce installation size (-1.5 MB).

As a result, gzip becomes mandatory when building Modules from git
repository.

--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -181,7 +181,7 @@ fi
 %else
 %license COPYING.GPLv2
 %endif
-%doc ChangeLog README NEWS.txt MIGRATING.txt INSTALL.txt CONTRIBUTING.txt changes.txt
+%doc ChangeLog.gz README NEWS.txt MIGRATING.txt INSTALL.txt CONTRIBUTING.txt changes.txt
 %{_sysconfdir}/modulefiles
 %if 0%{?fedora}
 %ghost %{_sysconfdir}/profile.d/modules.csh
