gh/cirrus: add gzip package to CI test environments

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -83,7 +83,7 @@ task:
     image_family: freebsd-13-1
     cpu: 1
     memory: 2G
-  reqinstall_script: pkg install -y bash wget gmake dejagnu py39-sphinx tcl86 tcl-wrapper autoconf ksh93 zsh fish perl5 python39 ruby cmake R readline
+  reqinstall_script: pkg install -y bash wget gmake dejagnu py39-sphinx gzip tcl86 tcl-wrapper autoconf ksh93 zsh fish perl5 python39 ruby cmake R readline
   configure_script:
     - ./configure
   << : *BUILD_INSTALL_TEST_TEMPLATE
@@ -97,7 +97,7 @@ task:
     image: ghcr.io/cirruslabs/macos-monterey-xcode:latest
   reqinstall_script:
     - brew update
-    - brew install md5sha1sum expect dejagnu grep fish r tcl-tk
+    - brew install md5sha1sum expect dejagnu grep fish r tcl-tk gzip
   configure_script:
     - ./configure --prefix=/tmp/modules --with-loadedmodules=null:dot --with-tcl=/opt/homebrew/lib
   << : *BUILD_INSTALL_TEST_TEMPLATE
@@ -130,7 +130,7 @@ task:
     yes | unminimize || true
     # install requirements
     apt-get update
-    apt-get -y install wget expect-dev dejagnu python3-sphinx man-db bash tcsh ksh zsh fish tcl tcl8.6 perl python ruby cmake r-base-core
+    apt-get -y install wget expect-dev dejagnu python3-sphinx gzip man-db bash tcsh ksh zsh fish tcl tcl8.6 perl python ruby cmake r-base-core
     # libtclenvmodules build requirements
     apt-get -y install gcc autoconf tcl8.6-dev
     # requirements for source-sh extra tests
@@ -156,7 +156,7 @@ task:
     yes | unminimize || true
     # install requirements
     apt-get update
-    apt-get -y install wget expect-dev dejagnu python3-sphinx man-db bash tcsh ksh zsh fish tcl tcl8.6 perl python3 ruby cmake r-base-core
+    apt-get -y install wget expect-dev dejagnu python3-sphinx gzip man-db bash tcsh ksh zsh fish tcl tcl8.6 perl python3 ruby cmake r-base-core
     # libtclenvmodules build requirements
     apt-get -y install gcc autoconf tcl8.6-dev
     # requirements for source-sh extra tests
@@ -190,7 +190,7 @@ task:
       SPHINX_PKG='python-sphinx'
     fi
     yum install -y epel-release
-    yum install -y tcsh zsh ksh tcl perl $PYTHON_PKG ruby cmake R-core make wget perl $SPHINX_PKG git dejagnu man-db rpm-build bzip2 autoconf gcc tcl-devel
+    yum install -y tcsh zsh ksh tcl perl $PYTHON_PKG gzip ruby cmake R-core make wget perl $SPHINX_PKG git dejagnu man-db rpm-build bzip2 autoconf gcc tcl-devel
     yum install -y which xorg-x11-server-utils xorg-x11-server-Xvfb
     if [[ $VERSION_ID != 8* ]]; then
       wget -O /etc/yum.repos.d/shells_fish_release_2.repo http://download.opensuse.org/repositories/shells:fish:release:2/CentOS_${VERSION_ID}/shells:fish:release:2.repo
@@ -212,7 +212,7 @@ task:
     cpu: 1
     memory: 2G
   reqinstall_script: |
-    zypper install -y tcsh zsh ksh fish tcl perl python ruby cmake R-core R-core-packages make wget python-Sphinx git dejagnu man net-tools autoconf gcc tcl-devel
+    zypper install -y tcsh zsh ksh fish tcl perl python ruby cmake R-core R-core-packages make wget python-Sphinx gzip git dejagnu man net-tools autoconf gcc tcl-devel
     zypper install -y which xrdb xvfb-run
   configure_script:
     - ./configure --enable-versioning --with-loadedmodules=null:dot --with-quarantine-vars='LD_LIBRARY_PATH LD_PRELOAD'
