--- a/.github/workflows/lint_tests.yaml
+++ b/.github/workflows/lint_tests.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcl8.6 python3
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcl8.6 python3
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf tcl8.6-dev
           # add linter tools
