--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core
           # add package to run tests in an X-enabled environment
           sudo apt-get install -y xvfb x11-xserver-utils
       - name: Build Modules
@@ -72,7 +72,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh perl python3 ruby cmake r-base-core
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.5
@@ -129,7 +129,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.5
@@ -189,7 +189,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf tcl8.6-dev 
       - name: Build Modules
@@ -241,7 +241,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh perl python3 ruby cmake r-base-core
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.5
@@ -297,7 +297,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.7
@@ -344,7 +344,7 @@ jobs:
       - name: Install system packages
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl9.0
