--- a/.github/workflows/windows_tests.yaml
+++ b/.github/workflows/windows_tests.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           # precise all sphinxcontrib packages required as dependency spec
           # of python39-sphinx package is regularly broken
-          packages: make sed git autoconf automake libtool tcl python39 python39-sphinx zip python39-sphinxcontrib-applehelp python39-sphinxcontrib-devhelp python39-sphinxcontrib-htmlhelp python39-sphinxco  ntrib-jsmath python39-sphinxcontrib-qthelp python39-sphinxcontrib-serializinghtml python39-sphinxcontrib-websupport python39-alabaster python39-sqlalchemy
+          packages: make sed git autoconf automake libtool tcl python39 python39-sphinx gzip zip python39-sphinxcontrib-applehelp python39-sphinxcontrib-devhelp python39-sphinxcontrib-htmlhelp python39-sphinxco  ntrib-jsmath python39-sphinxcontrib-qthelp python39-sphinxcontrib-serializinghtml python39-sphinxcontrib-websupport python39-alabaster python39-sqlalchemy
       - name: Install Tcl under Windows
         shell: cmd
         run: |
@@ -74,7 +74,7 @@ jobs:
           # of python39-sphinx package is regularly broken
           # precise liblapack0 package needed by R package (missing dependency
           # since R-4.2.1-1)
-          packages: make sed git autoconf automake libtool tcl dejagnu python39 python39-sphinx ruby zsh tcsh mksh fish cmake R liblapack0 tcl-devel gcc-core wget python39-sphinxcontrib-applehelp python39-sphinxcontrib-devhelp python39-sphinxcontrib-htmlhelp python39-sphinxcontrib-jsmath python39-sphinxcontrib-qthelp python39-sphinxcontrib-serializinghtml python39-sphinxcontrib-websupport python39-alabaster python39-sqlalchemy
+          packages: make sed git autoconf automake libtool tcl dejagnu python39 python39-sphinx gzip ruby zsh tcsh mksh fish cmake R liblapack0 tcl-devel gcc-core wget python39-sphinxcontrib-applehelp python39-sphinxcontrib-devhelp python39-sphinxcontrib-htmlhelp python39-sphinxcontrib-jsmath python39-sphinxcontrib-qthelp python39-sphinxcontrib-serializinghtml python39-sphinxcontrib-websupport python39-alabaster python39-sqlalchemy
       - name: Configure Git safe.directory
         run: |
           bash -lc 'git config --global --add safe.directory $(cygpath -u "$GITHUB_WORKSPACE")'
@@ -118,7 +118,7 @@ jobs:
       - name: Install system packages
         shell: msys2 {0}
         run: |
-          pacman --noconfirm --noprogressbar -S tcl tcl-devel dejagnu python ruby cmake zsh tcsh mksh fish gcc autoconf make git wget
+          pacman --noconfirm --noprogressbar -S tcl tcl-devel dejagnu python ruby cmake zsh tcsh mksh fish gcc autoconf make git wget gzip
       - name: Build Modules
         shell: msys2 {0}
         run: |
