--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -578,7 +578,7 @@ proc getModuleTag {mod tag {cmp eqstart} {return_rule 0}} {
    return {}
 }
 
-proc isModuleTagged {mod tag {collected 0}} {
+proc isModuleTagged {mod tag {collected 0} {fpmod {}}} {
    # retrieve tag information from collected tags or raw info
    if {$collected} {
       return [expr {$tag in [getTagList $mod]}]
@@ -1176,7 +1176,7 @@ proc getPathToModule {mod {indir {}} {report_issue 1} {look_loaded no}\
          set modnamevr [lindex $retlist 1]
       }
       # update result if forbidden
-      if {[isModuleTagged $modnamevr forbidden]} {
+      if {[isModuleTagged $modnamevr forbidden 0 [lindex $retlist 0]]} {
          set retlist [list {} [lindex $retlist 1] [lindex $retlist 2]\
             accesserr [getForbiddenMsg $modnamevr]]
       }
@@ -2795,8 +2795,8 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
             }
             # transform forbidden module in error entry if it specifically
             # matches search query
-            if {$hidlvl == 2 && $hidmatch && [isModuleTagged $elt\
-               forbidden]} {
+            if {$hidlvl == 2 && $hidmatch && [isModuleTagged $elt forbidden 0\
+               $dir/$elt]} {
                set found_list($elt) [list accesserr [getForbiddenMsg $elt]]
                set err_list($elt) 1
             } else {
