--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1324,7 +1324,8 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
       }
       set sym_list [getVersAliasList $elt]
       # fetch tags but clear excluded tag
-      set tag_list [replaceFromList [getTagList $elt] $excluded_tag]
+      set tag_list [replaceFromList [getTagList $elt [lindex $mod_list($elt)\
+         2]] $excluded_tag]
       # abbreviate tags unless for json output
       if {!$json} {
          set tag_list [abbrevTagList $tag_list]
