Adapt getExportTagList proc for full path module
Update getExportTagList to pass full path module designation to the
underlying getTagList call. Full path module is not set and querying tag
information of an already loaded module.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -695,7 +695,7 @@ proc getTagList {mod {fpmod {}} {sort 1}} {
 }
 
 # return tags applying to mod that can be exported
-proc getExportTagList {mod {serialized 0}} {
+proc getExportTagList {mod {serialized 0} {fpmod {}}} {
    # remove loaded/hidden tags from the list to register
    lassign [getDiffBetweenList [getTagList $mod $fpmod 0] [list loaded\
       hidden]] ret
