--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1315,7 +1315,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
 
          # declare the tags of this module
-         if {[set modtag [getExportTagList $modnamevr 1]] ne {}} {
+         if {[set modtag [getExportTagList $modnamevr 1 $modfile]] ne {}} {
             append-path __MODULES_LMTAG $modtag
          }
          if {[set modtag [getExtraTagList $modnamevr 1]] ne {}} {
@@ -1339,7 +1339,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
 
          # record module title (name, variants and tags)
          registerModuleDesignation $msgrecid $modname [getVariantList\
-            $modname 7] [getExportTagList $modname]
+            $modname 7] [getExportTagList $modname 0 $modfile]
 
          # consider evaluation hidden if hidden loaded module is auto loaded
          # and no specific messages are recorded for this evaluation
