--- a/testsuite/modulefiles.3/tag/.modulerc
+++ b/testsuite/modulefiles.3/tag/.modulerc
@@ -1,7 +1,9 @@
 #%Module
-module-forbid tag/1.0 tag/2.0 tag/3.0
-module-virtual tag/2.0 ./1.0
-module-alias tag/3.0 tag/1.0
+if {![info exists env(TESTSUITE_FPMOD_TAG)]} {
+    module-forbid tag/1.0 tag/2.0 tag/3.0
+    module-virtual tag/2.0 ./1.0
+    module-alias tag/3.0 tag/1.0
+}
 
 if {[versioncmp $tcl_version 8.5] > -1} {
     set tomorrow [clock format [expr {[clock seconds]+86400}] -format %Y-%m-%d]
