Adapt getModuleTagProp and Msg procs for full path mod
Update getModuleTagProp to pass full path module designation to the
underlying getModuleTag call to get tag properties defined over a full
path module designation.

Procedures that fetch forbidden tag properties are updated to obtain
definition set over full path designation.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -216,7 +216,7 @@ proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
    # inform that access to module will be soon denied
    if {$mode ne {unload} && [isModuleTagged $modnamevr nearly-forbidden 1\
       $modfile]} {
-      reportWarning [getNearlyForbiddenMsg $modnamevr]
+      reportWarning [getNearlyForbiddenMsg $modnamevr $modfile]
       set nearlyforbidwarn 1
    # fail unload attempt if module is sticky, unless if forced or reloading
    # also fail unload if mod is super-sticky even if forced, unless reloading
@@ -458,10 +458,10 @@ proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
    if {$mode ne {unload}} {
       if {[isModuleTagged $modnamevr forbidden 1 $modfile]} {
          set errorVal 1
-         reportError [getForbiddenMsg $modnamevr]
+         reportError [getForbiddenMsg $modnamevr $modfile]
       } elseif {![info exists nearlyforbidwarn] && [isModuleTagged $modnamevr\
          nearly-forbidden 1 $modfile]} {
-         reportWarning [getNearlyForbiddenMsg $modnamevr]
+         reportWarning [getNearlyForbiddenMsg $modnamevr $modfile]
       }
    }
 
