--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -919,19 +919,19 @@ proc getConIsLoadedMsg {conlist {loading 0}} {
    return "Conflicting [join $condesiglist { and }] $is $loaded"
 }
 
-proc getForbiddenMsg {mod} {
+proc getForbiddenMsg {mod fpmod} {
    set msg "Access to module [getModuleDesignation spec $mod 2] is denied"
-   set extramsg [getModuleTagProp $mod forbidden message]
+   set extramsg [getModuleTagProp $mod $fpmod forbidden message]
    if {$extramsg ne {}} {
       append msg \n$extramsg
    }
    return $msg
 }
 
-proc getNearlyForbiddenMsg {mod} {
-   set after [getModuleTagProp $mod nearly-forbidden after]
+proc getNearlyForbiddenMsg {mod fpmod} {
+   set after [getModuleTagProp $mod $fpmod nearly-forbidden after]
    set msg "Access to module will be denied starting '$after'"
-   set extramsg [getModuleTagProp $mod nearly-forbidden message]
+   set extramsg [getModuleTagProp $mod $fpmod nearly-forbidden message]
    if {$extramsg ne {}} {
       append msg \n$extramsg
    }
