--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -232,7 +232,7 @@ proc cmdModuleSearch {{mod {}} {search {}}} {
                   # register any error occurring on element matching search
                   if {[modEq $mod $elt]} {
                      set err_list($elt) [list accesserr [getForbiddenMsg\
-                        $elt]]
+                        $elt $dir/$elt]]
                   }
                } else {
                   set interp_list($elt) $dir/$elt
@@ -247,7 +247,7 @@ proc cmdModuleSearch {{mod {}} {search {}}} {
                   # register any error occurring on element matching search
                   if {[modEq $mod $elt]} {
                      set err_list($elt) [list accesserr [getForbiddenMsg\
-                        $elt]]
+                        $elt [lindex $mod_list($elt) 2]]]
                   }
                } else {
                   set interp_list($elt) [lindex $mod_list($elt) 2]
