--- a/testsuite/modulefiles.4/tag/.modulerc
+++ b/testsuite/modulefiles.4/tag/.modulerc
@@ -30,5 +30,59 @@ if {[info exists env(TESTSUITE_FPMOD_TAG)]} {
         rc3 {
             module-tag bar tag/1.0
         }
+        forbid1 {
+            module-forbid [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        forbid2 {
+            module-forbid --message my-forbid-msg [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        forbid3 {
+            set tomorrow [clock format [expr {[clock seconds]+86400}] -format %Y-%m-%d]
+            module-forbid --nearly-message my-nearly-forbid-msg --after $tomorrow\
+                [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        forbid4 {
+            module-forbid --message my-forbid-msg1 [file dirname $ModulesCurrentModulefile]/1.0
+            module-forbid --message my-forbid-msg2 [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        forbid5 {
+            module-forbid --message my-forbid-msg1 tag/1.0
+            module-forbid --message my-forbid-msg2 [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        forbid6 {
+            module-forbid --message my-forbid-msg2 [file dirname $ModulesCurrentModulefile]/1.0
+            module-forbid --message my-forbid-msg1 tag/1.0
+        }
+        forbid7 {
+            set tomorrow [clock format [expr {[clock seconds]+86400}] -format %Y-%m-%d]
+            set aftertomorrow [clock format [expr {[clock seconds]+(86400*2)}] -format %Y-%m-%d]
+            module-forbid --nearly-message my-nearly-forbid-msg1 --after $tomorrow\
+                [file dirname $ModulesCurrentModulefile]/1.0
+            module-forbid --nearly-message my-nearly-forbid-msg2 --after $aftertomorrow\
+                [file dirname $ModulesCurrentModulefile]/1.0
+        }
+        forbid8 {
+            set tomorrow [clock format [expr {[clock seconds]+86400}] -format %Y-%m-%d]
+            set aftertomorrow [clock format [expr {[clock seconds]+(86400*2)}] -format %Y-%m-%d]
+            module-forbid --nearly-message my-nearly-forbid-msg1 --after $tomorrow\
+                [file dirname $ModulesCurrentModulefile]/1.0
+            module-forbid --nearly-message my-nearly-forbid-msg2 --after $aftertomorrow\
+                tag/1.0
+        }
+        forbid9 {
+            set tomorrow [clock format [expr {[clock seconds]+86400}] -format %Y-%m-%d]
+            set aftertomorrow [clock format [expr {[clock seconds]+(86400*2)}] -format %Y-%m-%d]
+            module-forbid --nearly-message my-nearly-forbid-msg2 --after $aftertomorrow\
+                tag/1.0
+            module-forbid --nearly-message my-nearly-forbid-msg1 --after $tomorrow\
+                [file dirname $ModulesCurrentModulefile]/1.0
+            module-virtual tag/1.1 ./1.0
+        }
+        forbid10 - forbid11 {
+            module-virtual tag/1.1 ./1.0
+        }
     }
 }
